# wsinsight-model-development

./: .gitignore  .gitmodules  README.md
cellvit-training/: README.md  TRAINED_HEADS.md  TRAININGSET_PREPARATION.md
cellvit-training/cellvit/: README.md
cellvit-training/pipeline/: README.md  __init__.py  _lib.sh  _run.py  agent_orchestrator.py  aggregate_pantissue.sh  audit_split_reuse.py  build_cell_labels.py  cli.py  paths.py  (+12 more)
cellvit-training/pipeline.old/: _lib.sh  agent_orchestrator.py  audit_all_tissues.sh  audit_split_reuse.py  compute_class_weights.py  export_all_tissues.sh  splits_all_tissues.sh  train_all_tissues.sh  train_tissue.sh  validate_classifier.py
data/: README.md
kurtorank/: README.md  SKILL.md  pyproject.toml
kurtorank/docs/references/: bladder.md  bone.md  brain.md  breast.md  cervix.md  circulating.md  colorectal.md  heart.md  immune.md  kidney.md  liver.md  lung.md  lymph_node.md  ovary.md  pancreas.md  prostate.md  skin.md  tonsil.md
kurtorank/scripts/: build_markers_v3_2.py  derive_hne_label_csvs.py  derive_pantissue_label_csvs.py  disco_downloader.py  reannotate_xenium.py
kurtorank/src/kurtorank/: __init__.py  __main__.py  cli.py
kurtorank/src/kurtorank/annotate/: main.py
kurtorank/src/kurtorank/markers/: __init__.py
kurtorank/src/kurtorank/markers/data/: markers-v3.csv  markers-v3_1.csv  markers-v3_1_checkpoint.csv  markers-v3_1_qc.csv  markers-v3_2.csv  markers-v3_2.csv.bak
kurtorank/src/kurtorank/rank/: __init__.py  main.py
kurtorank/src/kurtorank/seed/: __init__.py  disco.py  main.py
kurtorank/tests/: test_seed.py
(+50 files in other folders)
